# crdtsync

./: .gitignore  .ocamlformat  ARCHITECTURE.md  Cargo.toml  DECISIONS.md  Justfile  KANBAN.md  MONOREPO.md  Makefile  README.md  ROADMAP.md  RUST_REWRITE_PLAN.md  add.js  arena.c  arena.h  clientid.c  clientid.h  counter.c  counter.h  crdt.c  crdtsync.opam  crdtsync_core.opam  crdtsync_sdk.opam  dune  dune-project  element.c  element.h  elementid.c  elementid.h  hashtabl.c  hashtabl.h  hashtable.c  hashtable.h  host.h  host_posix.c  map.c  map.h  register.c  register.h  scalar.c  (+41 more)
.github/workflows/: ci.yml  rust.yml
.venv-fmt/: pyvenv.cfg
core/lib/auth/: crdtsync_auth.ml  dune
core/lib/blob/: crdtsync_blob.ml  dune
core/lib/crdt/: FUGUE.md  crdtsync_crdt.ml  dune  element_id.ml  element_id.mli  envelope.ml  envelope.mli  lamport.ml  lamport.mli  list.ml  list.mli  map.ml  map.mli  op.ml  op.mli  op_id.ml  op_id.mli  uuid_v7.ml  uuid_v7.mli  value.ml  value.mli  wall_time.ml  wall_time.mli
core/lib/persist/: crdtsync_persist.ml  dune
core/lib/server/: crdtsync_server.ml  dune
core/lib/wire/: crdtsync_wire.ml  dune
core/tests/: dune  test_element_id.ml  test_envelope.ml  test_lamport.ml  test_list.ml  test_map.ml  test_op_id.ml  test_smoke.ml  test_uuid_v7.ml  test_value.ml  test_wall_time.ml
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs  main.rs
crates/codegen/tests/: go.rs  python.rs
crates/codegen/tests/fixtures/: collide.schema.json  collide_generated.py  note.schema.json  note_generated.py
crates/core/: Cargo.toml
crates/core/src/: acl.rs  anchor.rs  client.rs  clientid.rs  codec.rs  counter.rs  diff.rs  doc.rs  element.rs  elementid.rs  host.rs  json.rs  lib.rs  list.rs  map.rs  marks.rs  migration.rs  op.rs  path.rs  protocol.rs  ranged.rs  register.rs  repair.rs  scalar.rs  schema.rs  stamp.rs  text.rs  treemove.rs  undo.rs  validate.rs  xml.rs  zone.rs
crates/core/tests/: acl.rs  acl_bounded_deny.rs  acl_delegation.rs  acl_element.rs  acl_eval.rs  acl_provenance.rs  anchor.rs  blob.rs  blob_path.rs  client.rs  client_branches.rs  client_clone.rs  client_diff.rs  client_outbox.rs  client_redirect.rs  client_snapshot.rs  client_versions.rs  clientid.rs  codec.rs  convergence.rs  cookbook.rs  counter.rs  diff.rs  diff_codec.rs  diff_property.rs  diff_render.rs  doc.rs  element.rs  elementid.rs  elementref.rs  json.rs  json_differential.rs  list.rs  map.rs  marks.rs  migration.rs  op.rs  path.rs  path_diff.rs  path_marks.rs  (+43 more)
crates/core/tests/common/: mod.rs
crates/ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/ffi/include/: crdtsync.h
crates/ffi/src/: lib.rs
crates/ffi/tests/: client.rs  ffi.rs  header.rs
crates/server/: Cargo.toml
crates/server/src/: acl.rs  admin.rs  audit.rs  auth.rs  authz.rs  auto_version.rs  blobs.rs  clock.rs  event.rs  gossip.rs  http.rs  index.rs  leadership.rs  lib.rs  main.rs  membership.rs  placement.rs  registry.rs  replay.rs  replication.rs  runtime.rs  schema_registry.rs  session.rs  store.rs  tls.rs  translate.rs  webhook.rs  zonetoken.rs
crates/server/tests/: acl.rs  acl_enforcement.rs  acl_redaction.rs  admin_http.rs  admin_register.rs  audit.rs  audit_query.rs  auth.rs  authz.rs  auto_version.rs  awareness.rs  awareness_authz.rs  awareness_grace.rs  awareness_schema_ttl.rs  awareness_throttle.rs  awareness_ttl.rs  blob_acl.rs  blob_http.rs  blobs.rs  branch_diff.rs  branch_from_snapshot.rs  branch_ops.rs  branch_sync.rs  branches.rs  catchup_translation.rs  clone_room.rs  compaction.rs  credentials_file.rs  cross_zone_token.rs  diff_query.rs  durability_fuzz.rs  element_index.rs  engine_events.rs  epoch_fence.rs  epoch_persistence.rs  export_import.rs  failover.rs  follower_reads.rs  gossip.rs  handshake_gate.rs  (+43 more)
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: lib.rs
crates/wasm/tests/: web.rs
sdks/go/: README.md  go.mod
sdks/go/collidegen/: collide_generated.go  collide_generated_test.go
sdks/go/crdtsync/: acl_test.go  blob_test.go  blob_upload_test.go  crdtsync.go  crdtsync_test.go  handle.go  handle_test.go  provider.go  provider_test.go  reactivity.go  reactivity_test.go  rich.go  rich_test.go
sdks/go/notegen/: note_generated.go  note_generated_test.go
sdks/js/: .gitignore  README.md  biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdks/js/scripts/: build-wasm.sh
sdks/js/src/: backend.ts  changes.ts  doc.ts  handles.ts  index.ts  internal.ts  marshal.ts  operator.ts  path.ts  provider.ts  scalar.ts
sdks/js/test/: atomic.test.ts  blobs.test.ts  changes.test.ts  convergence.test.ts  cursors.test.ts  handles.test.ts  marks.test.ts  operator.integration.test.ts  operator.test.ts  provider.integration.test.ts  provider.lifecycle.test.ts  reactivity.test.ts  schema.integration.test.ts  schema.test.ts  xml.test.ts
sdks/ocaml/lib/: crdtsync_sdk.ml  dune
sdks/ocaml/tests/: dune  test_smoke.ml
sdks/python/: README.md  pyproject.toml
sdks/python/crdtsync/: __init__.py
sdks/python/tests/: test_acl.py  test_blob.py  test_blob_upload.py  test_client.py  test_codegen.py  test_convergence.py  test_diff.py  test_handles.py  test_marks.py  test_provider.py  test_reactivity.py  test_relative_position.py  test_rich.py  test_schema.py  test_snapshot.py  test_undo.py  test_xml.py
sdks/typescript/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
sdks/typescript/src/: index.test.ts  index.ts
test_clientid.dSYM/Contents/: Info.plist
test_counter.dSYM/Contents/: Info.plist
test_doc.dSYM/Contents/: Info.plist
test_element.dSYM/Contents/: Info.plist
test_elementid.dSYM/Contents/: Info.plist
test_hashtabl.dSYM/Contents/: Info.plist
test_hashtable.dSYM/Contents/: Info.plist
test_map_abort.dSYM/Contents/: Info.plist
test_op.dSYM/Contents/: Info.plist
test_register.dSYM/Contents/: Info.plist
test_scalar.dSYM/Contents/: Info.plist
test_sha1_runtime_endian.dSYM/Contents/: Info.plist
test_stamp.dSYM/Contents/: Info.plist
test_uuid.dSYM/Contents/: Info.plist
(+34 files in other folders)
