[workspace]
resolver = "2"
members = ["crates/core", "crates/ffi", "crates/server"]
# The wasm SDK targets wasm32 and is built/tested with wasm-pack, not the
# native workspace test run.
exclude = ["crates/wasm"]

# Rust rewrite of the CRDT core. See RUST_REWRITE_PLAN.md.
# The C sources at the repo root remain until the port reaches parity, then
# they are removed.
