(tests
 (names
  test_smoke
  test_uuid_v7
  test_op_id
  test_lamport
  test_wall_time
  test_envelope
  test_element_id
  test_value
  test_map
  test_list)
 (libraries
  alcotest
  qcheck-alcotest
  crdtsync_core.crdt
  crdtsync_core.wire
  crdtsync_core.persist
  crdtsync_core.auth
  crdtsync_core.blob
  crdtsync_core.server))
