[package]
name = "crdtsync-ffi"
version = "0.0.0"
edition = "2021"
description = "C ABI for the CRDT core: opaque handles for Go/Python embedding."

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
crdtsync-core = { path = "../core" }
# Mints the unguessable handle for the inline `set_blob` producer.
getrandom = "0.2"
# Derives the doc-ACL actor key (SHA-256 truncation) the server keys tuples by.
sha2 = "0.10"

[build-dependencies]
# Regenerates the C header from the ABI on build. `clap` (its CLI) isn't needed.
cbindgen = { version = "0.29", default-features = false }
