[package]
name = "crdtsync-server"
version = "0.0.0"
edition = "2021"
description = "Single-node sync server: per-room op logs, idempotent ingest, catch-up replay."

[dependencies]
crdtsync-core = { path = "../core" }
# The read-only replay CLI (`crdtsync-replay` bin) parses its arguments with clap.
# A server-side operator tool, never the wasm-embeddable core.
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "sync", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
# Anonymous-mode actor ids are minted from system entropy at the transport
# layer, kept out of the Miri-gated pure-logic core.
getrandom = "0.2"
# The schema registry hash-locks each chain link by SHA-256. The crypto lives in
# the server, never in the wasm-embeddable core, and a client never verifies.
sha2 = "0.10"
# The admin control plane serves HTTP over the tokio runtime already present. It
# uses axum (hyper's battle-tested HTTP/1.1 parsing) rather than a hand-rolled
# parser — an untrusted network boundary where request-smuggling and framing
# edge cases are precisely what a hand-rolled parser gets wrong. tower-http adds
# the per-request timeout. Neither reaches the dep-minimal, wasm-embeddable core.
axum = "0.8"
tower-http = { version = "0.6", features = ["timeout"] }
# The blob-fetch route authorizes each fetch against the running registry actor
# through an async trait object (a per-reference read-authority query); async-trait
# makes that trait dyn-safe. Server-side only, never the core.
async-trait = "0.1"
# Parse the WS upgrade's cookie / query credential carriers.
cookie = { version = "0.18", default-features = false }
form_urlencoded = "1"
# Outbound webhooks POST engine events to a configured endpoint over the tokio
# runtime already present: reqwest (rustls TLS, no system OpenSSL) sends, serde
# renders the JSON body. Neither reaches the dep-minimal core.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
# TLS termination at the listener: tokio-rustls wraps each accepted socket in a
# rustls session (ring provider, matching the one reqwest already pulls in — no
# OpenSSL/system dep). rustls-pemfile parses the configured cert chain + key.
# Opt-in: with no cert configured the listener stays plaintext. Neither reaches
# the dep-minimal, wasm-embeddable core.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pemfile = "2"
# mTLS: after the handshake verifies a client cert against the configured CA, the
# leaf cert's SAN/CN is parsed into the connection's authenticated actor. x509-parser
# is a mature pure-Rust X.509 reader — no OpenSSL, never the core.
x509-parser = "0.16"
# Cross-zone capability tokens are AEAD-sealed under the server's zone-master key.
# ChaCha20-Poly1305 (RustCrypto) is constant-time in software with no AES-NI
# dependency; the crypto lives in the server, never the wasm-embeddable core.
chacha20poly1305 = "0.10"

[[bin]]
name = "crdtsync-server"
path = "src/main.rs"

# The read-only point-in-time replay / diff operator tool.
[[bin]]
name = "crdtsync-replay"
path = "src/bin/replay.rs"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "sync", "time"] }
# The blob-route tests supply a `BlobAccess` stub, whose trait is async.
async-trait = "0.1"
# `oneshot`-driving the admin router in-process (no socket) for the status matrix.
tower = { version = "0.5", features = ["util"] }
# Parse the JSON body a capture server receives, to assert the webhook shape.
serde_json = "1"
# Generate a self-signed cert/key pair in-test to exercise the TLS listener.
rcgen = "0.13"
