[package]
name = "crdtsync-wasm"
version = "0.0.0"
edition = "2021"
description = "WebAssembly bindings for the crdtsync CRDT core, for JavaScript."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crdtsync-core = { path = "../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
