# Its own workspace root: the wasm SDK is excluded from the native workspace and
# built standalone with wasm-pack, so it carries its own lockfile.
[workspace]

[package]
name = "crdtsync-wasm"
version = "0.0.0"
edition = "2021"
description = "WebAssembly bindings for the crdtsync CRDT core, for JavaScript."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crdtsync-core = { path = "../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
# Mints the inline blob's handle from the browser's crypto RNG.
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
