# Its own workspace root: the wasm SDK is excluded from the native workspace and
# built standalone with wasm-pack, so it carries its own lockfile.
[workspace]

[package]
name = "crdtsync-wasm"
version = "0.0.0"
edition = "2021"
description = "WebAssembly bindings for the crdtsync CRDT core, for JavaScript."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crdtsync-core = { path = "../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
# The blob-upload helper's async browser `fetch` glue.
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "Response"] }
# Mints the inline blob's handle from the browser's crypto RNG.
getrandom = { version = "0.2", features = ["js"] }
# Derives the doc-ACL actor key (SHA-256 truncation) the server keys tuples by.
sha2 = "0.10"

[dev-dependencies]
wasm-bindgen-test = "0.3"
